This fix the header grid content overlapping on change of resolution

--- a/clinic.css
+++ b/clinic.css
@@ -4,15 +4,15 @@ body{
       "header header"
       "spacer spacer"
       "article nav";
-    grid-template-rows: 10% 2.25% auto;  
+    grid-template-rows: 120px 25px auto;  
     grid-template-columns: 80% 20%;
     grid-row-gap: 0;
-    grid-column-gap: 10px;
+    grid-column-gap: 0;
     height: 100vh;
     margin: 0;
     }  
 article, nav{
-    padding: 0rem;
+    padding: 0;
     font-family: Verdana;
     }
     #spacer1{
@@ -113,8 +113,7 @@ a:active {
     border-style: ridge;
     border-width: 0.5rem;   
     margin-bottom: 0;
-    position:sticky;
-    top:0;
+   
     
 }
 hr{
@@ -128,6 +127,7 @@ hr{
     align-items: center;
     flex-direction: column;
     margin-top: 1rem;
+    
 }
 .classArticleimage>img{
     max-width:40%;    
@@ -141,9 +141,12 @@ h1, h2, h3, h4{
 .articleTitle{
     margin-left: 1rem;
     margin-bottom: 0.5rem;
+    padding-left: 1rem;
 }
 p{
     margin-left: 1rem;
+    padding-left: 1rem;
+
 }
 
 /* Stack the layout on small devices/viewports. */
